; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_2037.c_fwb32.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_2037.c_fwb32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fwb32(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = ashr i32 %5, 24
  %7 = and i32 %6, 255
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @fputc(i32 %7, i32* %8)
  %10 = load i32, i32* %4, align 4
  %11 = ashr i32 %10, 16
  %12 = and i32 %11, 255
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @fputc(i32 %12, i32* %13)
  %15 = load i32, i32* %4, align 4
  %16 = ashr i32 %15, 8
  %17 = and i32 %16, 255
  %18 = load i32*, i32** %3, align 8
  %19 = call i32 @fputc(i32 %17, i32* %18)
  %20 = load i32, i32* %4, align 4
  %21 = and i32 %20, 255
  %22 = load i32*, i32** %3, align 8
  %23 = call i32 @fputc(i32 %21, i32* %22)
  ret void
}

declare dso_local i32 @fputc(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
